--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ body{
     background-color: black;
     color: white;
 }
+.section1 button{
+    background-color: pink;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: larger;
+    font-family: fantasy;
+}
