--- a/style.css
+++ b/style.css
@@ -15,13 +15,11 @@ body{
     margin-top: 100px;
 }
 .section1{
-    /* text-align: center; */
     display: flex;
-    margin: 50px;
+    justify-content: space-evenly;
 }
 .h1h2{
     text-align: center;
-    /* margin-top: 150px; */
 }
 .h1h2 h1{
     margin: 80px;
@@ -29,12 +27,6 @@ body{
 .h1h2 h2{
     margin-top: 0px;
 }
-/* .section1 h1{
-    margin: 5%;
-}
-.section1 h2{
-    margin: 5%;
-} */
 .h1h2 button{
     background-color: pink;
      padding-top: 20px;
@@ -44,5 +36,4 @@ body{
     font-size: larger; 
     font-family: fantasy;
     margin: 10%;
-    /* margin-left: 50%; */
 }
