--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 
 
 
-           /* style names.html */
+  /* style names.html */
 
 .second-page{
     display: flex;
@@ -51,10 +51,11 @@ body{
 .details-input{
     width: 360px;
     margin: auto;
+    margin: 0px 100px;
 }
 .details{
     background: rgb(165, 33, 33);
-    margin: 20px;
+    margin: 70px 0px;
     text-align: center;
 }
 .details input{
@@ -71,4 +72,7 @@ body{
     padding: 10px  60px;
    font-size: larger; 
    font-family: fantasy;
+}
+.img1{
+    margin-top: 200px;
 }
