--- a/style.css
+++ b/style.css
@@ -35,11 +35,6 @@ body{
     font-family: fantasy;
     margin: 10%;
 }
-
-
-
-  /* style names.html */
-
 .second-page{
     display: flex;
 }
@@ -78,4 +73,11 @@ body{
 }
 .img1{
     margin-top: 200px;
+}
+.emptyy{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
 }
